# vectorized-pacman-ML

./: .gitignore  README.md  eval.py  pyproject.toml  requirements.txt  watch.py
engine/: action_mask.py  batched_game.py  constants.py  distances.py  ghosts.py  maze.py  pacman_movement.py  pellets.py  rewards.py
levels/: level_1.txt
models/: pacman_model.py
tests/: conftest.py  test_phase1_movement.py  test_phase2_pellets.py  test_phase3_rewards.py  test_phase4_ghost.py  test_phase5_fright.py  test_phase6_all.py  test_phase7_mask.py  test_phase8_training.py
training/: train.py
utils/: replay_buffer.py
