[project]
name = "vectorized-pacman-ml"
version = "0.1.0"
description = "Vectorized Pac-Man engine for batched RL training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
